# jaylib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  archive.sh  build.sh  clean.sh  fragment.glsl  main.c  run.sh  shader.glsl
archive/2024-10-05/: main.c  shader.glsl
archive/2024-10-07/: main.c  shader.glsl
archive/2024-10-13/: main.c
archive/2024-10-14/: main.c
archive/2024-10-19/: shader.glsl
archive/2024-10-19/2024-10-14/: shader.glsl
